--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
         <p>To see the code, visit the <a href="https://github.com/sinood/Sign-Language">Github repo</a>!</p>
         <p>Created by <a href="https://sinood.github.io/">Yassin Oulad Daoud</a> for <a href ="http://sachacks.io/2018/index.html">SackHacks 2018</a>.</p>
         <img class="full" src="awards.jpg">
-        A low-quality photo of the SacHacks organizers, me, and one of my teammates from UC Davis, Jeremey Liu. Our teammate, James Jung (UC Berkeley), is not pictured.
+        The SacHacks organizers, me, and one of my teammates from UC Davis, Jeremey Liu. Our teammate, James Jung (UC Berkeley), is not pictured.
     </body>
 </html>
